--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,12 @@ Description: The question of the "correct" genre classification of popular music
 License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
     dplyr,
     purrr,
+    rlang,
     tidyr
