add function to combine spotify tags for feature artists

--- a/data-raw/.gitignore
+++ b/data-raw/.gitignore
@@ -1,3 +1,4 @@
 /poptrag.rds
 /album_charts_weekly_Deutschland_incl_spotify_ids.rds
 /single_charts_weekly_Deutschland_incl_spotify_ids.rds
+/spotify_artist_genres_lookup.rds
