--- a/reports/.gitignore
+++ b/reports/.gitignore
@@ -2,5 +2,5 @@
 /01_data_report_files/
 /02_genre_trees_files/
 /03_metagenres_files/
-/04_metagenres_mapping/
+/04_metagenres_mapping_files/
 /05_rf_classifier_files/
